# A.D.A.M.-AI-Document-analysis-Agent-using-MCP-

./: .gitignore  README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml
core/: chat.py  claude.py  cli.py  cli_chat.py  file_processor.py  folder_scanner.py  tools.py
